[package]
name = "matter_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matterdb = { version = "1.0.0", path = "../matterdb" }
matterdb-derive = { version = "1.0.0", path = "../derive" }
thiserror = "1.0"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"

